# DeepSeekBalanceMonitor

./: .gitignore  CHANGELOG.md  CHANGELOG_zh.md  CONTRIBUTING.md  GEMINI.md  README.md  README_zh.md  WINDOWS_CODE_SIGNING.md  main.py  requirements.txt
.github/workflows/: build.yml  rainmeter.yml  rust-linux.yml  rust-windows.yml
rainmeter-widget/: PYTHON_RAINMETER_INTEGRATION.md
rainmeter-widget/DeepSeekBalanceMonitor/: DeepSeekBalanceMonitor.en.hd.ini  DeepSeekBalanceMonitor.en.ini  DeepSeekBalanceMonitor.hd.ini  DeepSeekBalanceMonitor.ini
rainmeter-widget/DeepSeekBalanceMonitor/@Resources/: Status.en.inc  Status.zh.inc
rust-linux/: Cargo.toml
rust-linux/package/: dsmon.service  install.sh  uninstall.sh
rust-linux/plasmoid/package/: metadata.json
rust-linux/plasmoid/package/contents/config/: config.qml  main.xml
rust-linux/plasmoid/package/contents/ui/: configGeneral.qml  configHistory.qml  main.qml
rust-linux/src/: demo.rs  main.rs
rust-windows/: Cargo.toml  app.manifest  build.rs
rust-windows/src/: main.rs
rust-windows/src/windows_app/: demo.rs
scripts/: build_exe.bat  build_mac.sh  build_rmskin.bat  build_rmskin.ps1  generate_icon.py  update_windows_root_certs.bat  version_info.txt
src/: api_client.py  app_state.py  config.py  history_dialog.py  icon_renderer.py  rainmeter_server.py  secure_settings.py  settings_dialog.py  storage.py  tray_app.py
src/mac/: keystore.py  main.py  settings.py
src/webview/: __init__.py  bridge.py  main.py
src/webview/web/: index.html
src/webview/web/css/: styles.css
src/webview/web/js/: api.js  app.js  chart.js  settings.js
tests/: test_core.py
